@@ -61,10 +61,22 @@
 	window_ = [[UIWindow alloc] initWithFrame:[[UIScreen mainScreen] bounds]];
 	
 	
-	// Create an CCGLView with a RGB565 color buffer, and a depth buffer of 0-bits
+	// CCGLView creation
+	// viewWithFrame: size of the OpenGL view. For full screen use [_window bounds]
+	//  - Possible values: any CGRect
+	// pixelFormat: Format of the render buffer. Use RGBA8 for better color precision (eg: gradients). But it takes more memory and it is slower
+	//	- Possible values: kEAGLColorFormatRGBA8, kEAGLColorFormatRGB565
+	// depthFormat: Use stencil if you plan to use CCClippingNode. Use Depth if you plan to use 3D effects, like CCCamera or CCNode#vertexZ
+	//  - Possible values: 0, GL_DEPTH_COMPONENT24_OES, GL_DEPTH24_STENCIL8_OES
+	// sharegroup: OpenGL sharegroup. Useful if you want to share the same OpenGL context between different threads
+	//  - Possible values: nil, or any valid EAGLSharegroup group
+	// multiSampling: Whether or not to enable multisampling
+	//  - Possible values: YES, NO
+	// numberOfSamples: Only valid if multisampling is enabled
+	//  - Possible values: 0 to glGetIntegerv(GL_MAX_SAMPLES_APPLE)
 	CCGLView *glView = [CCGLView viewWithFrame:[window_ bounds]
-								   pixelFormat:kEAGLColorFormatRGB565	//kEAGLColorFormatRGBA8
-								   depthFormat:0	//GL_DEPTH_COMPONENT24_OES
+								   pixelFormat:kEAGLColorFormatRGB565
+								   depthFormat:0
 							preserveBackbuffer:NO
 									sharegroup:nil
 								 multiSampling:NO
